# LipiLok

./: .dockerignore  .env.example  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  test_build.yml
language_models/: download_models.py  test_models.py
spellcheck/: api.py  app.py  config.py  database.py  logging.py
src/lipilok/: app.py  logging.py  models.py  schemas.py
src/lipilok/routers/: endpoints.py
